--- a/themes/RNRA_easy/templates/startpage.html
+++ b/themes/RNRA_easy/templates/startpage.html
@@ -34,6 +34,11 @@
        on this site, the template was not loaded properly. Please refere to a system administrator!{/define_slot}
     </p>
     
+    <div id="nb_selector">
+        <p>Choose any of the given Catchments in order to view its balances.Please make sure, at least one 
+        resources set as well as at least one demand scenario is linked to this Catchment.</p><br/>
+        {define_slot name="nb_selector"}{/define_slot}
+    </div>
     <div class="default_balance">
         {define_slot name="default_balance"}{/define_slot}
     </div>
