--- a/themes/RNRA_easy/templates/Dataface_Main_Template.html
+++ b/themes/RNRA_easy/templates/Dataface_Main_Template.html
@@ -29,30 +29,26 @@
 		{block name="custom_stylesheets2"}
 		{define_slot name="dataface_javascripts"}
 		<!-- Common Plone ECMAScripts -->
-	
-		
-		
+
+
+
 		<script type="text/javascript" language="javascript"><!--
 		DATAFACE_URL = '{$ENV.DATAFACE_URL}';
 		DATAFACE_SITE_URL = '{$ENV.DATAFACE_SITE_URL}';
 		DATAFACE_SITE_HREF = '{$ENV.DATAFACE_SITE_HREF}';
-		
+
 		//--></script>
                 <!-- jQuery library (served from Google) -->
                 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 		<script type="text/javascript"
 				src="{$ENV.DATAFACE_URL}/plone_javascripts.js">
 		</script>
-                <script type="text/javascript">
-                        /* hide search form on ALL balances pages */
-                        $('#top-search-form').css('display', 'none');
-                </script>
 		{if $ENV.APPLICATION.usage_mode == 'edit'}
 		<script type="text/javascript"
 				src="{$ENV.DATAFACE_URL}/js/editable.js">
 		</script>
 		{/if}
-		
+
 		{/define_slot}
 		{* Add the head content that is to be inserted in the head of the document.
 		   This was added in version 1.0 to provide an easier way to add custom
@@ -75,8 +71,8 @@
 
 	</head>
 	<body onload="bodyOnload()" {block name="body_atts"}>
-             
-            <!--MOVE THIS OUTSIDE THE TEMPLATE!!!-->
+            <div id='popup_wrapper' style='width: 100%; height:100%;background-image: url(images/transparent_grey.png); position: fixed; z-index: 99; display: none;'>               
+            </div>
                 {if !$ENV.prefs.horizontal_tables_menu and $ENV.prefs.show_tables_menu}
 		{block name="before_nav_menu"}
 		{include file="Dataface_NavMenu.html"}
@@ -97,11 +93,11 @@
 		{block name="before_header"}
 		{define_slot name="global_header"}{include file="global_header.html"}{/define_slot}
 		{block name="after_header"}
-			
+
 		{if $ENV.prefs.show_search}
 		{block name="before_search"}
 		{define_slot name="search_form"}
-<!--		<div class="search_form" style="float: right; white-space: nowrap" id="top-search-form">
+		<div class="search_form" style="float: right; white-space: nowrap" id="top-search-form">
 			<form method="GET" action="{$smarty.server.HOST_URI}{$ENV.DATAFACE_SITE_HREF}">
 			<label>{translate id="scripts.GLOBAL.LABEL_SEARCH"}Search{/translate}:</label>
 			<input type="hidden" name="-table" value="{$ENV.APPLICATION_OBJECT->_currentTable}"/>
@@ -123,21 +119,20 @@
 			</select>
 			{else}
 			{foreach from=$find_actions item="find_action"}
-				
+
 				{assign var=option_value value=$find_action.action}
 				{if !$option_value}
 					{assign var=option_value value=$find_action.name}
 				{/if}
 				<input type="hidden" name="-action" value="{$option_value}"/>
 			{/foreach}
-				
+
 			{/if}
 			<input type="submit" name="-submit" value="{translate id="scripts.GLOBAL.LABEL_SUBMIT"}Search{/translate}" id="search_submit_button" />
 			{block name="after_search_form_submit"}
 			</form>
-		
+
 		</div>
--->
 		{/define_slot}
 		{block name="after_search"}
 
@@ -155,7 +150,9 @@
 		{define_slot name="language_selector"}<div id="language_selector">{language_selector autosubmit="true" type="ul" use_flags=false}</div>{/define_slot}
 		{block name="after_language_selector"}
 		{/if}
-		
+                
+                {define_slot name='popup_link'}{/define_slot}
+
 		{if !$ENV.prefs.hide_user_status}
 		<div id="user-status">
 		{if $ENV.username}
@@ -184,24 +181,25 @@
 	</div>
 	{block name="before_main_table"}
         
+        
 	{define_slot name="main_table"}
 	<table  border="0" cellpadding="5" id="main_table">
 	<tr>
 	<td valign="top" id="main_column">
 	{block name="before_main_column"}
 	{define_slot name="main_column"}
-	
+
 		{if $back and !$ENV.APPLICATION.hide_back}
 		<div class="browser_nav_bar">
 			<a href="{$back.link}" title="{translate id="scripts.GLOBAL.LABEL_BACK"}Back{/translate}">&lt;&lt; {translate id="scripts.GLOBAL.LABEL_GO_BACK"}Go Back{/translate}</a>
 		</div>
 		{/if}
-		
+
 
 		<div class="horizontalDivider">&nbsp;</div>
-		
 
-		
+
+
 		{if $ENV.APPLICATION_OBJECT->numMessages() > 0 }
 			{block name="before_message"}
 			<div class="portalMessage">
@@ -214,7 +212,7 @@
 			</div>
 			{block name="after_message"}
 		{/if}
-		
+
 		{if $ENV.APPLICATION_OBJECT->numErrors() > 0 }
 			{block name="before_errors"}
 			<div class="portalMessage">
@@ -228,7 +226,7 @@
 			</div>
 			{block name="after_errors"}
 		{/if}
-		
+
                
 		{block name="before_main_section"}
 		{define_slot name="main_section"}
@@ -238,7 +236,7 @@
 				{$body}
 				{/define_slot}
 				{block name="after_record_content"}
-		
+
 			</div>
 		{/define_slot}
 		{block name="after_main_section"}
@@ -290,7 +288,7 @@
 				{/define_slot}
 				{* Content to be shown just after record content in the Main Template. *}
 				{block name="after_record_content"}
-		
+
 			</div>
 		{/define_slot}
 		{block name="after_main_section"}
