--- a/themes/RNRA_easy/templates/Dataface_Fineprint.html
+++ b/themes/RNRA_easy/templates/Dataface_Fineprint.html
@@ -22,6 +22,7 @@
     <a href="doc/index.html" style="float:right;" target="_blank">Development</a>{/translate}<br/><br />
     {translate id="templates.Dataface_Fineprint.SHER}WaterMIS Balances Module concept, design and setup by 
     <a href="http://www.sher.be" target="_blank">SHER Ingenieurs-Conseils s.a</a>{/translate}<br/>
+    <p>Version:{define_slot name="version"}X.X{/define_slot} </p>
     {translate id="templates.Dataface_Fineprint.POWERED_BY_DATAFACE"}Powered by <a href="http://xataface.com">Xataface</a>{/translate}<br/>
     {translate id="templates.Dataface_Fineprint.COPYRIGHT" year="2005-2010"}(c) 2005-2010 Web Lite Solutions Corp., All rights reserved{/translate}
 </div>
